--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb+srv://lalitmahajan484_db_user:z2SzKGp4tLhUaCaz@cluster0.rqk48cw.mongodb.net/LoginApp
 z2SzKGp4tLhUaCaz
+FRONTEND_URL=https://app-test-client.vercel.app
