--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 #REACT_APP_API_URL=http://localhost:5000/api/auth
-REACT_APP_API_UR=https://app-test-server.vercel.app/
+REACT_APP_API_URL=https://app-test-server.vercel.app
